force-app/main/default/objects/SP_Session__c/SP_Session__c.object-meta.xml
<CustomObject>
    <description>Tracks portal user sessions for the Support Portal. Each login creates a session record with an expiration time.</description>
    <label>Support Portal Session</label>
    <nameField>
        <displayFormat>SPS-{00000}</displayFormat>
        <label>Session Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Support Portal Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>