force-app/main/default/objects/SP_Session__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <description>True when the session has not yet expired (Session End is in the future).</description>
    <formula>Session_End__c &gt; NOW()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>