force-app/main/default/objects/SP_Session__c/fields/IP_Address__c.field-meta.xml
<CustomField>
    <fullName>IP_Address__c</fullName>
    <description>Client IP address that created this session.</description>
    <label>IP Address</label>
    <length>50</length>
    <type>Text</type>
</CustomField>