force-app/main/default/objects/SP_Session__c/fields/Session_End__c.field-meta.xml
<CustomField>
    <fullName>Session_End__c</fullName>
    <description>When this session expires. Extended on each authenticated page request.</description>
    <label>Session End</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>