force-app/main/default/objects/SP_Session__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The portal user (Contact) this session belongs to.</description>
    <label>User</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Portal Sessions</relationshipLabel>
    <relationshipName>Portal_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>