force-app/main/default/objects/SP_Session__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Active__c</columns>
    <columns>Session_Start__c</columns>
    <columns>Session_End__c</columns>
    <columns>IP_Address__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>